hcs-client/src/components/settings/appSettings.scss
.settings-wrapper {
  position: absolute;
  top: 20px;
  left: 30px;
  text-align: left;
  border-radius: 0px 60px 10px 10px;
  background-color: snow;
  border: 1px solid black;
  padding: 5px;
  box-shadow: -3px 3px #aca7a7;

  #settings-title {
    margin-top: 10px;
    margin-left: 10px;
    margin-bottom: 0px;
    font-size: 16px;
  }

  .speed-control {
    padding-top: 1px;
    text-align: center;
    margin: 0px 10px 10px 10px;

    .speed-btn {
      display: inline-block;
      background-color: whitesmoke;
      font-size: 1.2em;
      padding: 10px 20px 10px 20px;
      margin: 10px;
      border: 1px solid black;
      border-radius: 20px;
      cursor: pointer;
    }
  }

  .app-info-wrapper {
    max-width: 300px;

    #app-title {
      text-align: center;
      margin-top: 60px;
    }

    .app-info {
      // background-color: red;
      margin: 5px;
    }
  }
}

